@@ -99,7 +99,7 @@ void ftestu(unsigned int a, unsigned int b)
 void
 testTortureExecute (void)
 {
-#if !(defined(__clang__) && __clang_major__ <= 6)
+#if !(defined(__clang__) && __clang_major__ <= 11)
 
 #if INT_MAX == 2147483647
   ftest(0x00000000,0x7fffffff);
